Horizontal scrolling on mobile issue resolved.

--- a/css/theme.css
+++ b/css/theme.css
@@ -10,6 +10,7 @@
 /* General body text + semantic tag styling rules*/
 body {
     width: 100%;
+    max-width: 100%;
     height: 100%;
     font-family: "Palatino Linotype", "Book Antiqua", Palatino, serif;
     color: #fff;
@@ -17,16 +18,16 @@ body {
     overflow-x:hidden;
 }
 
-
 html {
     width: 100%;
     height: 100%;
+    max-width: 100%;
+    overflow-x: hidden;
 }
 
 .content-section {
     padding-top: 100px;
 }
-
 
 footer {
     padding: 50px 0;
